X-editable changelog
=============================


Version 1.1.2 wip
----------------------------   
[enh] composite pk can be defined as JSON in data-pk attribute (vitalets) 
[enh #30] new option 'sourceCache' true|false to disable cache for select (vitalets) 
[bug #34] inputclass span* broken with fluid bootstrap layout. Classes changed to 'input-*'. (vitalets) 
[enh] utils now added to $.fn.editableutils instead of $.fn.editableform.utils (vitalets)
[enh] input types now added to $.fn.editabletypes instead of $.fn.editableform.types (vitalets)
[enh] playground and tests now use requirejs (vitalets)  
[bug #27] 'today' button toggle bug in bootstrap-datepicker (vitalets)  


Version 1.1.1 Nov 30, 2012
----------------------------   
[enh] 'showbuttons' option to hide buttons in form (vitalets)  
[enh] object can be passed in 'option' method to set several options at once (vitalets)  
[enh #20] toggle editable by 'dblclick' and 'mouseenter' (vitalets)  
[enh] added 'inputs-ext' directory with sample input 'address'. They will not be concatenated to main files (vitalets)  
[enh #13] 'onblur' option: to cancel, submit or ignore when user clicks outside the form (vitalets)  
[enh] 'ajaxOptions' parameter for advanced ajax configuration (vitalets)  
[enh] 'success' callback can return object to overwrite submitted value (vitalets)  
       
       
Version 1.1.0 Nov 27, 2012
----------------------------   
[enh #11] icon cancel changed to 'cross' (tarciozemel)  
[enh] added support for IE7+ (vitalets)  
[enh #9] 'name' or 'id' is not required anymore (vitalets)      
[enh] 'clear' button added in date and dateui (vitalets)      
[enh] form template changed: added DIV.editable-input, DIV.editable.buttons and $.fn.editableform.buttons (vitalets)      
[enh] new input type: checklist (vitalets)      
[enh] updated docs: inputs dropdown menu, global templates section (vitalets)      
                            

Version 1.0.1 Nov 22, 2012